target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 9d55bc302ecddc70a5f645e58a369696cc5b7d04
    app.quarkus.io/build-timestamp: 2023-07-18 - 23:59:29 +0000
  labels:
    app.kubernetes.io/name: movie-library-app
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: movie-library-app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: movie-library-app
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 9d55bc302ecddc70a5f645e58a369696cc5b7d04
    app.quarkus.io/build-timestamp: 2023-07-18 - 23:59:29 +0000
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/name: movie-library-app
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: movie-library-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: movie-library-app
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: <<unknown>>
        app.quarkus.io/commit-id: 9d55bc302ecddc70a5f645e58a369696cc5b7d04
        app.quarkus.io/build-timestamp: 2023-07-18 - 23:59:29 +0000
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: movie-library-app
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: JAVA_APP_JAR
              value: /deployments/quarkus-run.jar
          image: gtavares/movie-library-app:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: movie-library-app
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 9d55bc302ecddc70a5f645e58a369696cc5b7d04
    app.quarkus.io/build-timestamp: 2023-07-18 - 23:59:29 +0000
  labels:
    app.kubernetes.io/name: movie-library-app
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: movie-library-app
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: movie-library-app
